# cv-filtering

./: .gitignore  DEPLOYMENT_CHECKLIST.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PIPELINE_5STEP_COMPLETE.md  README.md  pyproject.toml  requirements.txt  setup.py
demo/: QUICKSTART.md  requirements.txt
demo/docs/: ADD_NEW_FORMAT.md  API_DOCUMENTATION.md  COMPLETION_SUMMARY.txt  DASHBOARD_GUIDE.md  DASHBOARD_VISUAL_GUIDE.md  DATA_DIVERSIFICATION_COMPLETION.md  DAY1_REPORT.md  DAYS_1_4_STATUS_REPORT.md  DAY_4_COMPLETION.md  DAY_5_COMPLETION_REPORT.md  DAY_5_PLAN.md  DELIVERABLES_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_NEXT_STEPS.md  DEPLOYMENT_SUMMARY.md  ENV_AND_VENV.md  FEATURE_ROADMAP.md  FINAL_OPTIMIZATION_SUMMARY.md  PROGRESS_REPORT.md  PROJECT_COMPLETION_REPORT.md  Q1_2026_ADVANCED_FORMATS.md  QUICK_START_DASHBOARD.md  README_DOCUMENTATION.md  TROUBLESHOOTING.md
demo/scripts/: demo.py  deploy.sh  diversify_cv_data.py  ingest_cvs.py  resample_demo_data.py  run_dashboard.sh  sample_data.ps1  sample_data.sh  test_optimizations.py
demo/src/: models.py
docs/: CV_PARSING_PIPELINE.md
docs/demo/: PHASE_3D_MIGRATION_GUIDE.md
output/markdown/: Bui-Van-Trang-TopCV.vn-280326.192325.md  DO-HUYEN-HUONG-TopCV.vn-280326.211511.md  DO-Quynh-Mai-TopCV.vn-280326.101115.md  Dang-Huong-Linh-TopCV.vn-280326.205839.md  Dang-Vu-Hai-TopCV.vn-280326.100315.md  Do-Quynh-An-Nhien-TopCV.vn-280326.100619.md  Do-Quynh-An-Nhien-TopCV.vn-280326.172313.md  Do-Quynh-Mai-TopCV.vn-280326.211829.md  Doan-Minh-Anh-TopCV.vn-280326.211118.md  Doan-Quynh-Chi-TopCV.vn-280326.210909.md  Hoang-Anh-Thu-TopCV.vn-280326.215115.md  Jayden-Dong-Pham-Vietnamwork.md  Kim-Nguyen-Vu-TopCV.vn-280326.212012.md  Le-Chien-TopCV.vn-280326.100759.md  Le-Chien-TopCV.vn-280326.172942.md  Le-Duc-Luong.md  Le-Ha-Trang-TopCV.vn-280326.205304.md  Le-Ngoc-Han-TopCV.vn-280326.173334.md  Le-Ngoc-Huy-TopCV.vn-280326.210718.md  Le-Truc-Anh-TopCV.vn-280326.212338.md  Nguyen-Anh-Tu-TopCV.vn-280326.215845.md  Nguyen-Hoang-Anh-TopCV.vn-280326.172136.md  Nguyen-Huong-Le-TopCV.vn-280326.173109.md  Nguyen-Huong-Le-TopCV.vn-280326.212513.md  Nguyen-Huyen-Trang-TopCV.vn-280326.174032.md  Nguyen-Khanh-Huyen-TopCV.vn-280326.100238.md  Nguyen-Le-Tu-Anh-TopCV.vn-280326.172736.md  Nguyen-Mai-Anh-TopCV.vn-280326.100348.md  Nguyen-Mai-Anh-TopCV.vn-280326.210138.md  Nguyen-Mai-Loan-TopCV.vn-280326.214250.md  Nguyen-Phuong-Thao-TopCV.vn-280326.210456.md  Nguyen-Quynh-Nhu-TopCV.vn-280326.214629.md  Nguyen-Tung-Duong-TopCV.vn-280326.100137.md  Nguyen-Tung-Duong-TopCV.vn-280326.100955.md  Nguyen-Tung-Duong-TopCV.vn-280326.172449.md  Nguyen-Xuan-Hiep-TopCV.vn-280326.212208.md  Nguyen-Xuan-Hieu-TopCV.vn-280326.174411.md  Nguyen-Xuan-Hieu-TopCV.vn-280326.192031.md  Pham-Bao-Khanh-TopCV.vn-280326.174220.md  Pham-Quynh-Nga-TopCV.vn-280326.215331.md  (+12 more)
scripts/: batch_cv_processing.py  demo_cv_parsing.py  test_5step_pipeline.py  test_ca_refactoring.py  test_clean_architecture_quick.py
src/: __init__.py  config.py  schemas.py
src/api/: __init__.py  main.py  models.py
src/cache/: __init__.py  cache_client.py  cache_config.py  cache_keys.py  cache_warmer.py
src/decision/: interview_decision_engine.py
src/extraction/: __init__.py  cv_parser.py  cv_pipeline.py  cv_pipeline_integration.py  cv_reading_order.py  enhanced_rules.py  experience_engine.py  hr_extractor_agent.py  jd_parser.py  llm_enhancer.py  llm_extractor.py  markdown_formatter.py  markdown_generator.py  pdf_extractor.py  pdf_layout_analyzer.py  performance_layer.py  project_detection_llm.py  section_detector.py  (+2 more)
tests/: test_api_integration.py  test_cache.py  test_cv_parsing.py  test_decision_engine.py  test_real_files.py  test_repositories.py  test_schemas_enhanced.py  test_scoring.py
(+84 files in other folders)
