[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-intelligence"
version = "1.0.0"
description = "AI-powered CV filtering and candidate intelligence platform"
readme = "README.md"
authors = [{name = "minhtb", email = "minhtb@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    # Core dependencies
    "python-docx==0.8.11",
    "PyPDF2==3.0.1",
    
    # NLP & Extraction
    "spacy==3.7.2",
    "python-dotenv==1.0.0",
    
    # Embeddings & Vector search
    "sentence-transformers==2.2.2",
    "faiss-cpu==1.7.4",
    "numpy>=1.26,<2.0",
    "scikit-learn==1.3.2",
    
    # API & Web
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    
    # Dashboard
    "streamlit==1.28.1",
    "plotly==5.18.0",
    
    # Data handling
    "pandas==2.2.2",
    "openpyxl>=3.1.0",
    
    # Async & Background jobs
    "aiofiles==23.2.1",
    
    # Utils
    "python-dateutil==2.8.2",
    "requests>=2.32.0",
    
    # Testing & Logging
    "python-logging-loki==0.3.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0"
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/minhtb/cv-intelligence"
Repository = "https://github.com/minhtb/cv-intelligence"
Issues = "https://github.com/minhtb/cv-intelligence/issues"

[project.scripts]
# Scripts will be available after proper package setup
# cv-ingest = "src.scripts.ingest_cvs:main"
# cv-api = "src.api.main:main"
# cv-dashboard = "src.dashboard.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-config --strict-markers"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "@abstract"
]
show_missing = true
skip_covered = false